build(pom): reorder plugins declarations

--- a/src/patch-place-break-cts/pom.xml
+++ b/src/patch-place-break-cts/pom.xml
@@ -116,6 +116,7 @@
 
     <build>
         <plugins>
+            <!-- TODO: to be removed -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
