--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,16 @@
                 <version>32.1.3-jre</version>
             </dependency>
             <dependency>
+                <groupId>org.checkerframework</groupId>
+                <artifactId>checker-qual</artifactId>
+                <version>3.37.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.errorprone</groupId>
+                <artifactId>error_prone_annotations</artifactId>
+                <version>2.23.0</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>3.13.0</version>
@@ -314,6 +324,11 @@
                 <artifactId>maven-install-plugin</artifactId>
                 <version>3.1.1</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.1.1</version>
+            </plugin>
 
             <!-- Formatting-related plugins -->
             <plugin>
@@ -473,7 +488,7 @@
                         <dependencyConvergence />
                         <reactorModuleConvergence />
                         <requireJavaVersion>
-                            <version>[11,12)</version>
+                            <version>[17,18)</version>
                         </requireJavaVersion>
                         <requireMavenVersion>
                             <version>[3.8,)</version>
@@ -486,6 +501,13 @@
                         <requireUpperBoundDeps />
                     </rules>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <!-- Test-related plugins -->
