--- a/.github/workflows/security-scan-scorecard.yml
+++ b/.github/workflows/security-scan-scorecard.yml
@@ -18,7 +18,7 @@ on:
       - 'release/v[1-9][0-9]*.0'
       - 'release/v[1-9][0-9]*.[1-9][0-9]*'
   schedule:
-    - cron: '24 3 * * 6'
+    - cron: '24 3 * * *' # At 03:24 every day
   branch_protection_rule:
 
 permissions: read-all
