--- a/src/spigot-plugin/pom.xml
+++ b/src/spigot-plugin/pom.xml
@@ -253,11 +253,11 @@
                     <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
                             <resource>META-INF/README.md</resource>
-                            <file>${project.basedir}/../../README.md</file>
+                            <file>${project.basedir}/../../.github/README.md</file>
                         </transformer>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
-                            <resource>META-INF/LICENSE.md</resource>
-                            <file>${project.basedir}/../../LICENSE.md</file>
+                            <resource>META-INF/LICENSE</resource>
+                            <file>${project.basedir}/../../LICENSE</file>
                         </transformer>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer" />
