--- a/pom.xml
+++ b/pom.xml
@@ -405,7 +405,7 @@
                             <dependencyConvergence />
                             <reactorModuleConvergence />
                             <requireJavaVersion>
-                                <version>[17,18)</version>
+                                <version>[17,)</version>
                             </requireJavaVersion>
                             <requireMavenVersion>
                                 <version>[3.8,)</version>
